    table from a query that returns empty data.  (Prasad Chakka via dhruba)

    HIVE-232. Metastore.warehouse configuration should use inherited 
    hadoop configuration. (Prasad Chakka via dhruba)

    HIVE-239. Check that replace columns in alter table does not have names
    that are same as the partitioning columns. (Prasad Chakka via athusoo)

    HIVE-25. Enable Table aliases in cluster by, distribute by and sort
    by clauses. (Prasad Chakka via athusoo)

    HIVE-217. Report progress during FileSinkOperator in order to avoid
    Stream closes exceptions. (Johan Oskarsson via athusoo)

    HIVE-242. Fix to allow CLI to interpret line breaks in any CLI
    command. (Prasad Chakka via athusoo)

    HIVE-65. Rewrite typechecking to use the walker interface and add
    Resolvers to UDF and UDAF to support proper implicit casting
    in a manner similar to other RDBMSs. (athusoo)

    HIVE-246. Fix to make msck command to look for tables in hdfs
    that are in the metastore. (Johan Oskarsson via athusoo)

    HIVE-248. Create file path names properly during the load command
    in case relative path names were specified. (Prasad Chakka via athusoo)

    HIVE-179. Make substr behavior similar to other RDBMS.
    (David Phillips via athusoo)

    HIVE-257. Set hive history log location to build for tests.
    (Suresh Anthony via athusoo)

    HIVE-256. Fix in map side aggregation wherein we were not including
    private members of the records in calculating the avg size of the
    rows and we were also not estimating variable length columns 
    properly. (Namit Jain via athusoo)

    HIVE-262. Fix for joins wherein a merged join having and outer or
    right outer join gave spurious rows in join. (Namit Jain via athusoo)

    HIVE-189. Make sampling tests deterministic by sorting output. (athusoo)

    HIVE-273. Fix avg UDAF which got broken hive 65. (athusoo)

    HIVE-283. Do case insensitive comparison of aliases in partition
    pruning. (athusoo)