@@ -1,11 +1,4 @@
-for i in xrange(100):
-   for j in xrange(10):
-      for k in xrange(42022):      
-         print 42000 * i + k
-
-
-for i in xrange(100):
-   for j in xrange(10):
-      for k in xrange(42022):      
-         print 5000000 + (42000 * i) + k
-
+for i in xrange(50):
+   for j in xrange(5):
+      for k in xrange(20022):      
+         print 20000 * i + k
